--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
 
     }
     buildTypes {
@@ -28,6 +29,7 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/io.netty.versions.properties'
         exclude 'META-INF/INDEX.LIST'
+        exclude 'project.properties'
     }
 }
 
@@ -39,7 +41,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.android.gms:play-services:11.4.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    compile ('com.google.cloud:google-cloud-translate:0.11.0-alpha')
-    compile ('com.google.apis:google-api-services-translate:v2-rev49-1.22.0')
+    compile 'com.google.cloud:google-cloud-translate:1.12.0'
     annotationProcessor 'com.google.auto.value:auto-value:1.2'
+    compile 'com.android.volley:volley:1.1.0'
 }
