--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     annotationProcessor 'com.google.auto.value:auto-value:1.2'
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.chathuralakmal:AndroidImagePopup:1.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
